@@ -16,35 +16,45 @@
 
 package com.netflix.spinnaker.clouddriver.cloudfoundry.deploy.converters;
 
+import static java.util.Collections.emptyList;
+import static java.util.Collections.emptyMap;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Matchers.any;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import com.netflix.spinnaker.clouddriver.artifacts.ArtifactCredentialsRepository;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.artifacts.ArtifactCredentialsFromString;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.cache.CacheRepository;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.client.CloudFoundryClient;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.client.MockCloudFoundryClient;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.client.model.v3.ProcessRequest;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.config.CloudFoundryConfigurationProperties;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.deploy.description.DeployCloudFoundryServerGroupDescription;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundryOrganization;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundrySpace;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.provider.CloudFoundryProvider;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.security.CloudFoundryCredentials;
-import com.netflix.spinnaker.clouddriver.security.AccountCredentialsProvider;
-import com.netflix.spinnaker.clouddriver.security.AccountCredentialsRepository;
-import com.netflix.spinnaker.clouddriver.security.DefaultAccountCredentialsProvider;
-import com.netflix.spinnaker.clouddriver.security.MapBackedAccountCredentialsRepository;
-import io.vavr.collection.HashMap;
-import io.vavr.collection.List;
+import com.netflix.spinnaker.credentials.CredentialsRepository;
+import com.netflix.spinnaker.credentials.MapBackedCredentialsRepository;
+import com.netflix.spinnaker.credentials.NoopCredentialsLifecycleHandler;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.ForkJoinPool;
+import okhttp3.OkHttpClient;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.stubbing.Answer;
 
 class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
+
   private static CloudFoundryCredentials createCredentials(String name) {
     CloudFoundryClient cloudFoundryClient = new MockCloudFoundryClient();
+    CacheRepository cacheRepository = mock(CacheRepository.class);
     {
       when(cloudFoundryClient.getOrganizations().findByName(any()))
           .thenAnswer(
@@ -58,7 +68,7 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
                             .build());
                   });
 
-      when(cloudFoundryClient.getOrganizations().findSpaceByRegion(any()))
+      when(cloudFoundryClient.getSpaces().findSpaceByRegion(any()))
           .thenReturn(
               Optional.of(
                   CloudFoundrySpace.builder()
@@ -67,9 +77,27 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
                       .organization(
                           CloudFoundryOrganization.builder().id("org-guid").name("org").build())
                       .build()));
+
+      when(cloudFoundryClient.getApplications().findServerGroupId(any(), any()))
+          .thenReturn("servergroup-id");
     }
 
-    return new CloudFoundryCredentials(name, "", "", "", "", "", "", false, 500) {
+    return new CloudFoundryCredentials(
+        name,
+        "managerUri",
+        "metricsUri",
+        "apiHost",
+        "username",
+        "password",
+        "environment",
+        false,
+        500,
+        cacheRepository,
+        null,
+        ForkJoinPool.commonPool(),
+        emptyMap(),
+        new OkHttpClient(),
+        new CloudFoundryConfigurationProperties.ClientConfig()) {
       public CloudFoundryClient getClient() {
         return cloudFoundryClient;
       }
@@ -79,68 +107,63 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
   private List<String> accounts =
       List.of("test", "sourceAccount", "sourceAccount1", "sourceAccount2", "destinationAccount");
 
+  private CredentialsRepository<ArtifactCredentialsFromString>
+      artifactCredentialsFromStringRepository =
+          new MapBackedCredentialsRepository<>(
+              ArtifactCredentialsFromString.ARTIFACT_TYPE, new NoopCredentialsLifecycleHandler<>());
   private final ArtifactCredentialsRepository artifactCredentialsRepository =
       new ArtifactCredentialsRepository(
-          Collections.singletonList(
-              accounts
-                  .map(
-                      account ->
-                          new ArtifactCredentialsFromString(
-                              account, List.of("test").asJava(), "applications: [{instances: 42}]"))
-                  .asJava()));
+          Collections.singletonList(artifactCredentialsFromStringRepository));
 
-  private final AccountCredentialsRepository accountCredentialsRepository =
-      new MapBackedAccountCredentialsRepository();
+  private final CredentialsRepository<CloudFoundryCredentials> credentialsRepository =
+      new MapBackedCredentialsRepository<>(CloudFoundryProvider.PROVIDER_ID, null);
 
   {
-    accounts
-        .toStream()
-        .forEach(
-            account -> accountCredentialsRepository.update(account, createCredentials(account)));
+    accounts.stream()
+        .map(
+            account ->
+                new ArtifactCredentialsFromString(
+                    account, List.of("test"), "applications: [{instances: 42}]"))
+        .forEach(artifactCredentialsFromStringRepository::save);
+    accounts.forEach(account -> credentialsRepository.save(createCredentials(account)));
   }
-
-  private final AccountCredentialsProvider accountCredentialsProvider =
-      new DefaultAccountCredentialsProvider(accountCredentialsRepository);
 
   private final DeployCloudFoundryServerGroupAtomicOperationConverter converter =
       new DeployCloudFoundryServerGroupAtomicOperationConverter(
-          null, artifactCredentialsRepository);
+          null, artifactCredentialsRepository, emptyList());
 
   @BeforeEach
   void initializeClassUnderTest() {
-    converter.setAccountCredentialsProvider(accountCredentialsProvider);
-    converter.setObjectMapper(new ObjectMapper());
+    converter.setCredentialsRepository(credentialsRepository);
   }
 
   @Test
   void convertManifestMapToApplicationAttributes() {
     final Map input =
-        HashMap.of(
-                "applications",
-                List.of(
-                        HashMap.of(
-                                "instances",
-                                7,
-                                "memory",
-                                "1G",
-                                "disk_quota",
-                                "2048M",
-                                "health-check-type",
-                                "http",
-                                "health-check-http-endpoint",
-                                "/health",
-                                "buildpacks",
-                                List.of("buildpack1", "buildpack2").asJava(),
-                                "services",
-                                List.of("service1").asJava(),
-                                "routes",
-                                List.of(HashMap.of("route", "www.example.com/foo").toJavaMap())
-                                    .asJava(),
-                                "env",
-                                HashMap.of("token", "ASDF").toJavaMap())
-                            .toJavaMap())
-                    .asJava())
-            .toJavaMap();
+        Map.of(
+            "applications",
+            List.of(
+                Map.of(
+                    "instances",
+                    7,
+                    "memory",
+                    "1G",
+                    "disk_quota",
+                    "2048M",
+                    "health-check-type",
+                    "http",
+                    "health-check-http-endpoint",
+                    "/health",
+                    "buildpacks",
+                    List.of("buildpack1", "buildpack2"),
+                    "services",
+                    List.of("service1"),
+                    "routes",
+                    List.of(Map.of("route", "www.example.com/foo")),
+                    "env",
+                    Map.of("token", "ASDF"),
+                    "command",
+                    "some-command")));
 
     assertThat(converter.convertManifest(input))
         .isEqualToComparingFieldByFieldRecursively(
@@ -150,18 +173,17 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
                 .setDiskQuota("2048M")
                 .setHealthCheckType("http")
                 .setHealthCheckHttpEndpoint("/health")
-                .setBuildpacks(List.of("buildpack1", "buildpack2").asJava())
-                .setServices(List.of("service1").asJava())
-                .setRoutes(List.of("www.example.com/foo").asJava())
-                .setEnv(HashMap.of("token", "ASDF").toJavaMap()));
+                .setBuildpacks(List.of("buildpack1", "buildpack2"))
+                .setServices(List.of("service1"))
+                .setRoutes(List.of("www.example.com/foo"))
+                .setEnv(Map.of("token", "ASDF"))
+                .setCommand("some-command")
+                .setProcesses(emptyList()));
   }
 
   @Test
   void convertManifestMapToApplicationAttributesUsingDeprecatedBuildpackAttr() {
-    final Map input =
-        HashMap.of(
-                "applications", List.of(HashMap.of("buildpack", "buildpack1").toJavaMap()).asJava())
-            .toJavaMap();
+    final Map input = Map.of("applications", List.of(Map.of("buildpack", "buildpack1")));
 
     assertThat(converter.convertManifest(input))
         .isEqualToComparingFieldByFieldRecursively(
@@ -169,14 +191,13 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
                 .setInstances(1)
                 .setMemory("1024")
                 .setDiskQuota("1024")
-                .setBuildpacks(List.of("buildpack1").asJava()));
+                .setBuildpacks(List.of("buildpack1"))
+                .setProcesses(emptyList()));
   }
 
   @Test
   void convertManifestMapToApplicationAttributesUsingDeprecatedBuildpackAttrBlankStringValue() {
-    final Map input =
-        HashMap.of("applications", List.of(HashMap.of("buildpack", "").toJavaMap()).asJava())
-            .toJavaMap();
+    final Map input = Map.of("applications", List.of(Map.of("buildpack", "")));
 
     assertThat(converter.convertManifest(input))
         .isEqualToComparingFieldByFieldRecursively(
@@ -184,13 +205,13 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
                 .setInstances(1)
                 .setMemory("1024")
                 .setDiskQuota("1024")
-                .setBuildpacks(Collections.emptyList()));
+                .setBuildpacks(Collections.emptyList())
+                .setProcesses(emptyList()));
   }
 
   @Test
   void convertManifestMapToApplicationAttributesUsingWithNoBuildpacks() {
-    final Map input =
-        HashMap.of("applications", List.of(Collections.EMPTY_MAP).asJava()).toJavaMap();
+    final Map input = Map.of("applications", List.of(Collections.EMPTY_MAP));
 
     assertThat(converter.convertManifest(input))
         .isEqualToComparingFieldByFieldRecursively(
@@ -198,6 +219,60 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
                 .setInstances(1)
                 .setMemory("1024")
                 .setDiskQuota("1024")
-                .setBuildpacks(Collections.emptyList()));
+                .setBuildpacks(Collections.emptyList())
+                .setProcesses(emptyList()));
+  }
+
+  @Test
+  void convertDescriptionTest() {
+    Map<String, Object> description =
+        ImmutableMap.of(
+            "applicationArtifact",
+            ImmutableMap.of(
+                "artifactAccount",
+                "destinationAccount",
+                "type",
+                "cloudfoundry/app",
+                "name",
+                "server-group-name",
+                "location",
+                "cf-region"),
+            "credentials",
+            "test",
+            "manifest",
+            ImmutableList.of(ImmutableMap.of("applications", ImmutableList.of(ImmutableMap.of()))));
+
+    DeployCloudFoundryServerGroupDescription result = converter.convertDescription(description);
+
+    assertThat(result.getArtifactCredentials()).isNotNull();
+    assertThat(result.getArtifactCredentials().getName()).isEqualTo("cloudfoundry");
+    assertThat(result.getApplicationArtifact()).isNotNull();
+    assertThat(result.getApplicationArtifact().getName()).isEqualTo("server-group-name");
+    assertThat(result.getApplicationArtifact().getArtifactAccount())
+        .isEqualTo("destinationAccount");
+    assertThat(result.getApplicationArtifact().getUuid()).isEqualTo("servergroup-id");
+  }
+
+  @Test
+  void convertDescriptionWithProcesses() {
+    final Map input =
+        Map.of(
+            "applications",
+            List.of(
+                Map.of(
+                    "processes",
+                    List.of(
+                        new ProcessRequest().setType("web").setInstances(2).setMemory("800M")))));
+
+    assertThat(converter.convertManifest(input))
+        .isEqualToComparingFieldByFieldRecursively(
+            new DeployCloudFoundryServerGroupDescription.ApplicationAttributes()
+                .setInstances(1)
+                .setMemory("1024")
+                .setDiskQuota("1024")
+                .setBuildpacks(Collections.emptyList())
+                .setProcesses(
+                    List.of(
+                        new ProcessRequest().setType("web").setInstances(2).setMemory("800M"))));
   }
 }
